[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0.3"

[dependencies]
axum = { version = "0.6.20", features = ["multipart"] }
serde_json = { version = "1.0.68" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.3.0", features = ["cors"] }
chrono = { version = "0.4.22", features = ["serde"] }
aws-config = "0.56.1"
aws-sdk-s3 = "0.33.0"
tokio-util = "0.7.9"
